mywork/force-app/main/default/objects/VC_Repository_Validation__c/VC_Repository_Validation__c.object-meta.xml
<CustomObject>
    <label>VC Repository Validation</label>
    <nameField>
        <displayFormat>VCRV-{0000}</displayFormat>
        <label>VC Repository Validation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VC Repository Validations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>