mywork/force-app/main/default/objects/VC_Repository_Validation__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>External Id used to match this record uniquely</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id used to match this record uniquely</inlineHelpText>
    <label>ExternalID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>