mywork/force-app/main/default/objects/VC_Repository_Validation__c/fields/SuccessfulValidation__c.field-meta.xml
<CustomField>
    <fullName>SuccessfulValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents the success status of this validation attempt</description>
    <inlineHelpText>Represents the success status of this validation attempt</inlineHelpText>
    <label>Successful Validation</label>
    <type>Checkbox</type>
</CustomField>