mywork/force-app/main/default/objects/VC_Repository_Validation__c/fields/ValidationDate__c.field-meta.xml
<CustomField>
    <fullName>ValidationDate__c</fullName>
    <description>Date / Time when the validation occurred</description>
    <inlineHelpText>Date / Time when the validation occurred</inlineHelpText>
    <label>Validation Date</label>
    <type>DateTime</type>
</CustomField>