mywork/force-app/main/default/objects/VC_Repository_Validation__c/fields/ValidationError__c.field-meta.xml
<CustomField>
    <fullName>ValidationError__c</fullName>
    <description>Errors that occurred when attempting the validation</description>
    <inlineHelpText>Errors that occurred when attempting the validation</inlineHelpText>
    <label>Validation Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>