mywork/force-app/main/default/objects/VC_Repository_Validation__c/fields/VC_Repository__c.field-meta.xml
<CustomField>
    <fullName>VC_Repository__c</fullName>
    <description>The repository for which this validation was attempted</description>
    <inlineHelpText>The repository for which this validation was attempted</inlineHelpText>
    <label>VC Repository</label>
    <referenceTo>VC_Repository__c</referenceTo>
    <relationshipLabel>VC Repository Validations</relationshipLabel>
    <relationshipName>VC_Repository_Validations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>